{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 259,
  "lineage": "6c910c3d-c8f1-82e5-6a26-0cc261b62d9b",
  "resources": [
    {
      "module": "module.computing",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d13aa14f3bc04dae",
            "arn": "arn:aws:ec2:us-east-1:357419298656:instance/i-0a064c20283d02154",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a064c20283d02154",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "disney_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-060e7bd719a8da750",
            "private_dns": "ip-192-168-10-205.ec2.internal",
            "private_ip": "192.168.10.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0811295192fd3f153",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e49c09111d18f1d",
            "tags": {
              "Name": "disney_app-1"
            },
            "tags_all": {
              "Name": "disney_app-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00c847a8dcccd70df"
            ]
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.availabile",
            "module.security.aws_security_group.privat_sg",
            "module.security.aws_security_group.public_sg",
            "module.computing.aws_key_pair.ssh_key",
            "module.computing.data.aws_ami.amazon_linux",
            "module.networking.aws_subnet.privat_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.computing",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d13aa14f3bc04dae",
            "arn": "arn:aws:ec2:us-east-1:357419298656:instance/i-064f79b0fb2da705c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064f79b0fb2da705c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "disney_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06fcc2e5e4d341f64",
            "private_dns": "ip-192-168-0-7.ec2.internal",
            "private_ip": "192.168.0.7",
            "public_dns": "ec2-3-93-198-94.compute-1.amazonaws.com",
            "public_ip": "3.93.198.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e231655e6ea5fe35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0846fd81af5e12848",
            "tags": {
              "Name": "disney_bastion-1"
            },
            "tags_all": {
              "Name": "disney_bastion-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c14ce65527e17f6e"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.availabile",
            "module.security.aws_security_group.public_sg",
            "module.computing.aws_key_pair.ssh_key",
            "module.computing.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "privat_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:route-table/rtb-0578ed075edff39e4",
            "default_route_table_id": "rtb-0578ed075edff39e4",
            "id": "rtb-0578ed075edff39e4",
            "owner_id": "357419298656",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-06fcc2e5e4d341f64",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "disney_privat_rt"
            },
            "tags_all": {
              "Name": "disney_privat_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.computing.aws_instance.bastion",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:security-group/sg-004040952473eb672",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-004040952473eb672",
            "ingress": [],
            "name": "default",
            "owner_id": "357419298656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "disney_default"
            },
            "tags_all": {
              "Name": "disney_default"
            },
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:internet-gateway/igw-001a28aecef949608",
            "id": "igw-001a28aecef949608",
            "owner_id": "357419298656",
            "tags": {
              "Name": "disney_igw"
            },
            "tags_all": {
              "Name": "disney_igw"
            },
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:route-table/rtb-09393d8a680fbbff9",
            "id": "rtb-09393d8a680fbbff9",
            "owner_id": "357419298656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001a28aecef949608",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "disney_public_rt"
            },
            "tags_all": {
              "Name": "disney_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07df8e8fc71cec2fc",
            "route_table_id": "rtb-0578ed075edff39e4",
            "subnet_id": "subnet-01e49c09111d18f1d"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.availabile",
            "module.security.aws_security_group.public_sg",
            "module.computing.aws_instance.bastion",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.aws_subnet.privat_subnets",
            "module.computing.aws_key_pair.ssh_key",
            "module.computing.data.aws_ami.amazon_linux",
            "module.networking.aws_default_route_table.privat_rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8233266f8314d0d",
            "route_table_id": "rtb-0578ed075edff39e4",
            "subnet_id": "subnet-07e37217c7718eda5"
          },
          "dependencies": [
            "module.computing.aws_key_pair.ssh_key",
            "module.networking.aws_default_route_table.privat_rt",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.availabile",
            "module.security.aws_security_group.public_sg",
            "module.computing.aws_instance.bastion",
            "module.computing.data.aws_ami.amazon_linux",
            "module.networking.aws_subnet.privat_subnets",
            "module.networking.aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08881784395fe9354",
            "route_table_id": "rtb-0578ed075edff39e4",
            "subnet_id": "subnet-0af5056df69c62215"
          },
          "dependencies": [
            "module.computing.aws_key_pair.ssh_key",
            "module.computing.data.aws_ami.amazon_linux",
            "module.networking.aws_default_route_table.privat_rt",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.availabile",
            "module.computing.aws_instance.bastion",
            "module.networking.aws_subnet.privat_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018201af7c25c976d",
            "route_table_id": "rtb-09393d8a680fbbff9",
            "subnet_id": "subnet-0846fd81af5e12848"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.availabile",
            "module.networking.aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e07d139eff141e11",
            "route_table_id": "rtb-09393d8a680fbbff9",
            "subnet_id": "subnet-075e0e0de0b1ded44"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.availabile",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:subnet/subnet-01e49c09111d18f1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-01e49c09111d18f1d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357419298656",
            "tags": {
              "Name": "disney_privat_subnet_0"
            },
            "tags_all": {
              "Name": "disney_privat_subnet_0"
            },
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:subnet/subnet-07e37217c7718eda5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.11.0/24",
            "id": "subnet-07e37217c7718eda5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357419298656",
            "tags": {
              "Name": "disney_privat_subnet_1"
            },
            "tags_all": {
              "Name": "disney_privat_subnet_1"
            },
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:subnet/subnet-0af5056df69c62215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.12.0/24",
            "id": "subnet-0af5056df69c62215",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357419298656",
            "tags": {
              "Name": "disney_privat_subnet_2"
            },
            "tags_all": {
              "Name": "disney_privat_subnet_2"
            },
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.availabile"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:subnet/subnet-0846fd81af5e12848",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0846fd81af5e12848",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357419298656",
            "tags": {
              "Name": "disney_public_subnet_0"
            },
            "tags_all": {
              "Name": "disney_public_subnet_0"
            },
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc",
            "module.networking.data.aws_availability_zones.availabile"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:subnet/subnet-075e0e0de0b1ded44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-075e0e0de0b1ded44",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357419298656",
            "tags": {
              "Name": "disney_public_subnet_1"
            },
            "tags_all": {
              "Name": "disney_public_subnet_1"
            },
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.availabile",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:vpc/vpc-09bc44fff44086a64",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08e93f6040d429e0f",
            "default_route_table_id": "rtb-0578ed075edff39e4",
            "default_security_group_id": "sg-004040952473eb672",
            "dhcp_options_id": "dopt-069c022307c4aff84",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09bc44fff44086a64",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0578ed075edff39e4",
            "owner_id": "357419298656",
            "tags": {
              "Name": "disney_main_vpc"
            },
            "tags_all": {
              "Name": "disney_main_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:network-acl/acl-08e93f6040d429e0f",
            "default_network_acl_id": "acl-08e93f6040d429e0f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08e93f6040d429e0f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "357419298656",
            "subnet_ids": [],
            "tags": {
              "Name": "disney_default"
            },
            "tags_all": {
              "Name": "disney_default"
            },
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:security-group/sg-00c847a8dcccd70df",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c847a8dcccd70df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c14ce65527e17f6e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "privat_sg",
            "name_prefix": "",
            "owner_id": "357419298656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "privat_sg"
            },
            "tags_all": {
              "Name": "privat_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc",
            "module.security.aws_security_group.public_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357419298656:security-group/sg-0c14ce65527e17f6e",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c14ce65527e17f6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.168.10.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "357419298656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg"
            },
            "tags_all": {
              "Name": "public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc44fff44086a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}